--- a/templates/admin/users/index.html
+++ b/templates/admin/users/index.html
@@ -15,7 +15,7 @@
                            placeholder="Type here...">
                 </form>
 
-                  <a href="#" class="inline-block px-8 py-2 ml-auto font-bold leading-normal text-center text-white align-middle transition-all ease-in bg-blue-500 border-0 rounded-lg shadow-md cursor-pointer text-xs tracking-tight-rem hover:shadow-xs hover:-translate-y-px active:opacity-85">
+                  <a href="{{ url_for('admin.users.create') }}" class="inline-block px-8 py-2 ml-auto font-bold leading-normal text-center text-white align-middle transition-all ease-in bg-blue-500 border-0 rounded-lg shadow-md cursor-pointer text-xs tracking-tight-rem hover:shadow-xs hover:-translate-y-px active:opacity-85">
                     Add
                 </a>
             </div>
