--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -13,6 +13,7 @@
     <!-- Nucleo Icons -->
     <link href="{{ url_for('static', path='assets/css/nucleo-icons.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', path='assets/css/nucleo-svg.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', path='assets/css/style.css') }}" rel="stylesheet"/>
     <!-- Popper -->
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <!-- Main Styling -->
