--- a/templates/admin/users/index.html
+++ b/templates/admin/users/index.html
@@ -66,7 +66,7 @@
                             <span class="text-xs font-semibold leading-tight dark:text-white dark:opacity-80 text-slate-400">{{ user.status }}</span>
                         </td>
                         <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
-                            <a href="javascript:;"
+                            <a href="{{ url_for('admin.users.edit', id=user.id) }}"
                                class="text-xs font-semibold leading-tight dark:text-white dark:opacity-80 text-slate-400">
                                 Edit </a>
                         </td>
