--- a/templates/admin/users/edit.html
+++ b/templates/admin/users/edit.html
@@ -2,8 +2,7 @@
 {% set title = "Edit user - "+user.first_name+" "+user.last_name %}
 {% block content %}
 <div class="w-full max-w-full px-3 shrink-0 md:flex-0">
-            <form method="post" action="#" class="relative flex flex-col min-w-0 break-words bg-white border-0 shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
-              <input type="hidden" name="_method" value="PUT">
+            <form method="post" action="{{ url_for('admin.users.update', id=user.id) }}" class="relative flex flex-col min-w-0 break-words bg-white border-0 shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
                 <div class="border-black/12.5 rounded-t-2xl border-b-0 border-solid p-6 pb-0">
                 <div class="flex items-center">
                     <div class=" md:w-8/12">
