--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -8,9 +8,9 @@
     <title>{{ title }}</title>
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"/>
-    <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+
     <!-- Nucleo Icons -->
+    <link href="{{ url_for('static', path='assets/css/font-awesome.min.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', path='assets/css/nucleo-icons.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', path='assets/css/nucleo-svg.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', path='assets/css/style.css') }}" rel="stylesheet"/>
