--- a/templates/admin/users/index.html
+++ b/templates/admin/users/index.html
@@ -93,7 +93,7 @@
 <script>
 async function deleteUser(id) {
     if (!confirm("Are you sure you want to delete this user?")) return;
-    const res = await fetch(`/users/${id}`, { method: "DELETE" });
+    const res = await fetch(`/admin/users/${id}`, { method: "DELETE" });
     if (res.ok) {
         location.reload();
     } else {
