--- a/templates/admin/auth/reset-password.html
+++ b/templates/admin/auth/reset-password.html
@@ -47,7 +47,7 @@
                                                class="focus:shadow-primary-outline dark:bg-gray-950 dark:placeholder:text-white/80 dark:text-white/80 text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding p-3 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-fuchsia-300 focus:outline-none"/>
                                     </div>
                                     <div class="mb-4">
-                                        <input type="password" name="confirm_password" placeholder="Confirm password"
+                                        <input type="password" name="password_confirm" placeholder="Confirm password"
                                                class="focus:shadow-primary-outline dark:bg-gray-950 dark:placeholder:text-white/80 dark:text-white/80 text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding p-3 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-fuchsia-300 focus:outline-none"/>
                                     </div>
                                     <div class="text-center">
