Send welcome email on user create

--- a/templates/admin/emails/welcome.html
+++ b/templates/admin/emails/welcome.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Welcome {{ user.first_name }}</h1>
-You have generated password: <b>{{ password }}</b>
-Or click on the link below to reset it, the link will expire in two hours.
+You have generated password: <b>{{ password }}</b><br>
+Or click on the link below to reset it, the link will expire in two hours.<br><br>
 <a href="{{ url }}">{{ url }}</a>
 </body>
 </html>
