--- a/templates/admin/pages/index.html
+++ b/templates/admin/pages/index.html
@@ -47,7 +47,7 @@
                         </td>
                         <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
 
-                            <a href="#" class="inline-block px-3 py-3 mr-3 font-bold text-center uppercase align-middle rounded-lg cursor-pointer bg-[#d4d4d8] leading-normal text-xs ease-in tracking-tight-rem shadow-md bg-x-25 hover:-translate-y-px active:opacity-85 hover:shadow-md">
+                            <a href="{{ url_for('admin.pages.edit', id=page.id) }}" class="inline-block px-3 py-3 mr-3 font-bold text-center uppercase align-middle rounded-lg cursor-pointer bg-[#d4d4d8] leading-normal text-xs ease-in tracking-tight-rem shadow-md bg-x-25 hover:-translate-y-px active:opacity-85 hover:shadow-md">
                                <i class="fa fa-pencil" aria-hidden="true"></i>
                             </a>
 
