Create page without published at date

--- a/templates/admin/pages/index.html
+++ b/templates/admin/pages/index.html
@@ -42,7 +42,7 @@
 
                         <td class="p-2 text-center align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                             <span class="text-xs font-semibold leading-tight dark:text-white dark:opacity-80 text-slate-400">
-                                {{ page.published_at.strftime("%m/%d/%Y") }}
+                                    {{ page.published_at.strftime("%m/%d/%Y") if page.published_at else ""  }}
                             </span>
                         </td>
                         <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
