Resset password - new layout

--- a/templates/admin/auth/reset-password.html
+++ b/templates/admin/auth/reset-password.html
@@ -1,71 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', path='assets/img/apple-icon.png') }}"/>
-    <link rel="icon" type="image/png" href="{{ url_for('static', path='assets/img/favicon.png') }}"/>
-    <title>Reset password</title>
-    <!--     Fonts and icons     -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"/>
-    <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    <!-- Nucleo Icons -->
-    <link href="{{ url_for('static', path='assets/css/nucleo-icons.css') }}" rel="stylesheet"/>
-    <link href="{{ url_for('static', path='assets/css/nucleo-svg.css') }}" rel="stylesheet"/>
-    <!-- Main Styling -->
-    <link href="{{ url_for('static', path='assets/css/argon-dashboard-tailwind.css?v=1.0.1') }}" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reset password - {{ request.state.app_name }}</title>
+    <link href="{{ url_for('static', path='assets/css/bootstrap.min.css') }}" rel="stylesheet">
+     <link href="{{ url_for('static', path='assets/css/font-awesome.min.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', path='assets/css/style.css') }}" rel="stylesheet"/>
 </head>
+<body>
 
-<body class="m-0 font-sans antialiased font-normal bg-white text-start text-base leading-default text-slate-500">
-<div class="container sticky top-0 z-sticky">
-    <div class="flex flex-wrap -mx-3">
-        <div class="w-full max-w-full px-3 flex-0">
-            <!-- Navbar -->
-        </div>
-    </div>
-</div>
-<main class="mt-0 transition-all duration-200 ease-in-out">
-    <section>
-        <div class="relative flex items-center min-h-screen p-0 overflow-hidden bg-center bg-cover">
-            <div class="container z-1">
-                <div class="flex flex-wrap -mx-3">
-                    <div class="flex flex-col w-full max-w-full px-3 mx-auto lg:mx-0 shrink-0 md:flex-0 md:w-7/12 lg:w-5/12 xl:w-4/12">
-                        <div class="relative flex flex-col min-w-0 break-words bg-transparent border-0 shadow-none lg:py4 dark:bg-gray-950 rounded-2xl bg-clip-border">
-                            <div class="p-6 pb-0 mb-0">
-                                <h4 class="font-bold">Resset password</h4>
-                            </div>
-                            <div class="flex-auto p-6">
-
-                               {% include 'partials/error_msg.html' %}
-
-                                <form role="form" action="{{ request.url_for('admin.reset-password.store') }}" method="post">
-                                    <input type="hidden" name="token" value="{{ user_token.token }}">
-                                    <div class="mb-4">
-                                        <input type="password" name="password" placeholder="Password"
-                                               class="focus:shadow-primary-outline dark:bg-gray-950 dark:placeholder:text-white/80 dark:text-white/80 text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding p-3 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-fuchsia-300 focus:outline-none"/>
+     <div class="row mt-4 justify-content-md-center">
+                    <div class="col-6">
+                        <div class="card p-4">
+                            <div class="card-body">
+                                <h3 class="card-title">Reset password - {{ request.state.app_name }}</h3>
+                                 {% include 'partials/error_msg.html' %}
+                                 <form role="form" action="{{ request.url_for('admin.reset-password.store') }}" method="post">
+                                     <input type="hidden" name="token" value="{{ user_token.token }}">
+                                     <div class="mb-3">
+                                            <label for="password" class="form-label">Password</label>
+                                            <input type="password" name="password" class="form-control" id="password">
                                     </div>
-                                    <div class="mb-4">
-                                        <input type="password" name="password_confirm" placeholder="Confirm password"
-                                               class="focus:shadow-primary-outline dark:bg-gray-950 dark:placeholder:text-white/80 dark:text-white/80 text-sm leading-5.6 ease block w-full appearance-none rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding p-3 font-normal text-gray-700 outline-none transition-all placeholder:text-gray-500 focus:border-fuchsia-300 focus:outline-none"/>
+                                     <div class="mb-3">
+                                            <label for="password_confirm" class="form-label">Confirm password</label>
+                                            <input type="password" name="password_confirm" class="form-control" id="password_confirm">
                                     </div>
-                                    <div class="text-center">
-                                        <button type="submit"
-                                                class="inline-block w-full px-16 py-3.5 mt-6 mb-0 font-bold leading-normal text-center text-white align-middle transition-all bg-blue-500 border-0 rounded-lg cursor-pointer hover:-translate-y-px active:opacity-85 hover:shadow-xs text-sm ease-in tracking-tight-rem shadow-md bg-150 bg-x-25">
-                                            Reset
-                                        </button>
-                                    </div>
-                                </form>
+                                     <div class="mb-3">
+                                         <div class="row">
+                                             <div class="col-12 d-flex justify-content-end">
+                                                 <button type="submit" class="btn btn-primary rounded-3">Submit</button>
+                                             </div>
+                                         </div>
+                                     </div>
+                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+    <footer class="footer mt-5 py-3 bg-light">
+        <div class="container-fluid">
+            <span class="text-muted text-center d-block">   ©
+                            <script>
+                                document.write(new Date().getFullYear() + ",");
+                            </script>
+                            made <i class="fa fa-heart"></i> by Webzards.</span>
         </div>
-    </section>
-</main>
+    </footer>
+
+    <!-- Bootstrap 5 JavaScript -->
+    <script src="{{ url_for('static', path='assets/js/bootstrap.bundle.min.js') }}"></script>
 </body>
-<!-- main script file  -->
-<script src="{{ url_for('static', path='assets/js/argon-dashboard-tailwind.js?v=1.0.1') }}" async></script>
 </html>
