Translate reset password page

--- a/templates/admin/auth/reset-password.html
+++ b/templates/admin/auth/reset-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset password - {{ request.state.app_name }}</title>
+    <title>{{ gettext('admin.reset_password') }} - {{ request.state.app_name }}</title>
     <link href="{{ url_for('static', path='assets/css/bootstrap.min.css') }}" rel="stylesheet">
      <link href="{{ url_for('static', path='assets/css/font-awesome.min.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', path='assets/css/style.css') }}" rel="stylesheet"/>
@@ -14,22 +14,22 @@
                     <div class="col-6">
                         <div class="card p-4">
                             <div class="card-body">
-                                <h3 class="card-title">Reset password - {{ request.state.app_name }}</h3>
+                                <h3 class="card-title">{{ gettext('admin.reset_password') }} - {{ request.state.app_name }}</h3>
                                  {% include 'partials/error_msg.html' %}
                                  <form role="form" action="{{ request.url_for('admin.reset-password.store') }}" method="post">
                                      <input type="hidden" name="token" value="{{ user_token.token }}">
                                      <div class="mb-3">
-                                            <label for="password" class="form-label">Password</label>
+                                            <label for="password" class="form-label">{{ gettext('admin.password') }}</label>
                                             <input type="password" name="password" class="form-control" id="password">
                                     </div>
                                      <div class="mb-3">
-                                            <label for="password_confirm" class="form-label">Confirm password</label>
+                                            <label for="password_confirm" class="form-label">{{ gettext('admin.confirm_password') }}</label>
                                             <input type="password" name="password_confirm" class="form-control" id="password_confirm">
                                     </div>
                                      <div class="mb-3">
                                          <div class="row">
                                              <div class="col-12 d-flex justify-content-end">
-                                                 <button type="submit" class="btn btn-primary rounded-3">Submit</button>
+                                                 <button type="submit" class="btn btn-primary rounded-3">{{ gettext('admin.submit') }}</button>
                                              </div>
                                          </div>
                                      </div>
